--- a/package.json
+++ b/package.json
@@ -15,5 +15,20 @@
     "@types/node": "^14.14.31",
     "nodemon": "^2.0.7",
     "typescript": "^4.2.2"
+  },
+  "dependencies": {
+    "@mikro-orm/cli": "^4.4.4",
+    "@mikro-orm/core": "^4.4.4",
+    "@mikro-orm/migrations": "^4.4.4",
+    "@mikro-orm/postgresql": "^4.4.4",
+    "pg": "^8.5.1",
+    "ts-node": "^9.1.1"
+  },
+  "mikro-orm": {
+    "useTsNode": true,
+    "configPaths": [
+      "./src/mikro-orm.config.ts",
+      "./dist/mikro-orm.config.js"
+    ]
   }
 }
