--- a/server/package.json
+++ b/server/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "watch": "tsc -w",
     "dev": "nodemon dist/index.js",
-    "start": "node dist/index.js",
-    "create:migration": "mikro-orm migration:create"
+    "start": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
@@ -26,10 +25,6 @@
     "typescript": "^4.2.2"
   },
   "dependencies": {
-    "@mikro-orm/cli": "^4.4.4",
-    "@mikro-orm/core": "^4.4.4",
-    "@mikro-orm/migrations": "^4.4.4",
-    "@mikro-orm/postgresql": "^4.4.4",
     "apollo-server-express": "^2.21.0",
     "argon2": "^0.27.1",
     "class-validator": "^0.13.1",
@@ -44,13 +39,7 @@
     "reflect-metadata": "^0.1.13",
     "ts-node": "^9.1.1",
     "type-graphql": "^1.1.1",
+    "typeorm": "^0.2.31",
     "uuid": "^8.3.2"
-  },
-  "mikro-orm": {
-    "useTsNode": true,
-    "configPaths": [
-      "./src/mikro-orm.config.ts",
-      "./dist/mikro-orm.config.js"
-    ]
   }
 }
