--- a/server/package.json
+++ b/server/package.json
@@ -12,20 +12,20 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/connect-redis": "0.0.16",
+    "@types/connect-redis": "^0.0.16",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
     "@types/express-session": "^1.17.3",
     "@types/ioredis": "^4.22.0",
-    "@types/node": "^14.14.31",
+    "@types/node": "^14.14.37",
     "@types/nodemailer": "^6.4.1",
     "@types/redis": "^2.8.28",
     "@types/uuid": "^8.3.0",
     "nodemon": "^2.0.7",
-    "typescript": "^4.2.2"
+    "typescript": "^4.2.3"
   },
   "dependencies": {
-    "apollo-server-express": "^2.21.0",
+    "apollo-server-express": "^2.22.2",
     "argon2": "^0.27.1",
     "class-validator": "^0.13.1",
     "connect-redis": "^5.1.0",
@@ -36,6 +36,7 @@
     "ioredis": "^4.24.2",
     "nodemailer": "^6.5.0",
     "pg": "^8.5.1",
+    "redis": "^3.0.2",
     "reflect-metadata": "^0.1.13",
     "ts-node": "^9.1.1",
     "type-graphql": "^1.1.1",
