--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.0.0",
     "@emotion/styled": "^11.0.0",
     "@urql/exchange-graphcache": "^4.0.0",
+    "cors": "^2.8.5",
     "formik": "^2.2.6",
     "framer-motion": "^2.9.4",
     "graphql": "^15.5.0",
@@ -20,16 +21,17 @@
     "next-urql": "^3.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-is": "^17.0.1",
+    "react-is": "^17.0.2",
     "urql": "^2.0.1"
   },
   "license": "MIT",
   "devDependencies": {
-    "@graphql-codegen/cli": "1.21.1",
+    "@graphql-codegen/cli": "^1.21.3",
     "@graphql-codegen/typescript": "1.21.0",
     "@graphql-codegen/typescript-operations": "1.17.14",
-    "@graphql-codegen/typescript-urql": "^2.0.3",
-    "@types/node": "^14.14.31",
+    "@graphql-codegen/typescript-urql": "^2.0.5",
+    "@types/cors": "^2.8.10",
+    "@types/node": "^14.14.37",
     "typescript": "^4.2.3"
   }
 }
